# pyansistring

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/pyansistring/: arts.py  constants.py  frozen.py  helpers.py  pyansistring.py  style.py  style_manager.py
tests/: test_helpers.py  test_pyansistring_defaults.py  test_pyansistring_features.py
